add template engine

--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "blog-nodejs",
-  "version": "1.0.0",
-  "description": "**Edit a file, create a new file, and clone from Bitbucket in under 2 minutes**",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://hieunt1997@bitbucket.org/hieunt1997/blog-nodejs.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/hieunt1997/blog-nodejs#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "blog-nodejs",
+    "version": "1.0.0",
+    "description": "**Edit a file, create a new file, and clone from Bitbucket in under 2 minutes**",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "nodemon --inspect src/index.js 80",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://hieunt1997@bitbucket.org/hieunt1997/blog-nodejs.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "homepage": "https://bitbucket.org/hieunt1997/blog-nodejs#readme",
+    "dependencies": {
+        "express": "^4.17.1",
+        "express-handlebars": "^5.2.0"
+    },
+    "devDependencies": {
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.6"
+    }
 }
