--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "**Edit a file, create a new file, and clone from Bitbucket in under 2 minutes**",
     "main": "src/index.js",
     "scripts": {
+        "beautiful": "prettier --single-quote --trailing-comma all --write --tab-width 4 'src/**/*.{js,json,scss}'",
         "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
-        "start": "nodemon --inspect src/index.js 80",
+        "start": "nodemon --inspect src/index.js ",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -20,8 +21,19 @@
         "express-handlebars": "^5.2.0"
     },
     "devDependencies": {
+        "husky": "^4.3.0",
+        "lint-staged": "^10.5.1",
         "morgan": "^1.10.0",
         "node-sass": "^5.0.0",
-        "nodemon": "^2.0.6"
+        "nodemon": "^2.0.6",
+        "prettier": "2.1.2"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,json,scss,md}": "prettier  --single-quote --trailing-comma all --write --tab-width 4"
     }
 }
