--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "homepage": "https://bitbucket.org/hieunt1997/blog-nodejs#readme",
     "dependencies": {
         "express": "^4.17.1",
-        "express-handlebars": "^5.2.0"
+        "express-handlebars": "^5.2.0",
+        "mongoose": "^5.10.15"
     },
     "devDependencies": {
         "husky": "^4.3.0",
