--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "license": "ISC",
     "homepage": "https://bitbucket.org/hieunt1997/blog-nodejs#readme",
     "dependencies": {
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
+        "mongodb": "^3.6.3",
         "mongoose": "^5.10.15"
     },
     "devDependencies": {
