--- a/package.json
+++ b/package.json
@@ -25,6 +25,18 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "babel-cli": "^6.26.0",
-    "nodemon": "^2.0.6"
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
+    "prettier": "2.2.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,json,scss,md}": "prettier  --single-quote --trailing-comma all --write --tab-width 2"
   }
 }
