--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/hieunt1997/backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
