--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/hieunt1997/backend#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "braces": "^3.0.2",
+    "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.9"
+    "joi": "^17.3.0",
+    "mongoose": "^5.11.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
@@ -30,7 +36,6 @@
     "babel-cli": "^6.26.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "prettier": "2.2.1"
   },
