--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/hieunt1997/backend#readme",
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
@@ -22,7 +23,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "joi": "^17.3.0",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0"
   },
