--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --inspect --exec babel-node src/server.js",
+    "start": "nodemon  --exec babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,7 +27,9 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0",
-    "passport": "^0.4.1"
+    "nodemailer": "^6.4.17",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
