--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "mkdirp": "^1.0.4",
     "moment": "^2.29.1",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "qs": "^6.9.4",
+    "sharp": "^0.27.0",
+    "slug": "^4.0.2",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
